[package]
name = "flow-rust"
version = "0.1.0"
authors = ["William Tu <u9012063@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
bitvec = "0.15.2"
byteorder = "1.3.2"
c2rust-bitfields = "0.3"

[features]
#![feature(stmt_expr_attributes)]

[lib]
name = "ovsflowrust"

# Create both static and dynamic library
crate-type = ["staticlib", "cdylib"]
